--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -44,6 +44,7 @@
 @media screen and (min-width: 1920px) {
   .header-container {
     margin: 0 3vw;
+    height: 6.5vw;
   }
 
   .logo {
