--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -79,7 +79,7 @@
   }
 
   .nav-container {
-    padding: 7vw 20vw;
+    padding: 7vw 20vw 0 20vw;
   }
   .nav-links {
     margin-bottom: 2vw;
@@ -105,13 +105,13 @@
 
 @media screen and (max-width: 1024px) {
   .nav-container {
-    padding: 7.5rem 10vw;
+    padding: 7.5rem 10vw 0 10vw;
   }
 }
 
 @media screen and (max-width: 768px) {
   .nav-container {
-    padding: 6rem 5vw;
+    padding: 6rem 5vw 0 5vw;
   }
 
   .nav-links {
